[workspace]
members = [
    "bin",
    "db",
    "common",
    "routers",
    "middleware",
    "configs",
]


[workspace.dependencies]
# axum = "0.6.7"
axum = { version = "0.6.7", features = ["headers"]}
tokio = { version = "1.25.0", features = ["full"] }
sqlx = { version = "0.6.2", features = [ "mysql", "runtime-tokio-rustls" ] }  # mysql8
# sqlx = { version = "0.6.2", features = [ "mysql", "runtime-tokio-native-tls" ] } 5.7
dotenv = "0.15.0"
once_cell = "1.17.1"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
log = "0.4.17"
log4rs = "1.2.0"
jsonwebtoken = "8.2.0"


password-hash = "0.5.0"
argon2 = "0.5.0"
pbkdf2 = "0.12.1"
scrypt = "0.11.0"
