[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }

password-hash = { workspace = true }
# argon2 = { workspace = true }
# pbkdf2 = { workspace = true }
# scrypt = { workspace = true }
