[package]
name = "routers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }


middleware = { path = "../middleware" }
common = { path = "../common" }
db = { path = "../db" }
